Replace usages of TruffleFile with java.io.File in runtime-compiler